@@ -1,3 +1,7 @@
+2012-05-24  Tim Lister <tlister@lcogt.net>
+
+	* WaveBand.pm: Include Sloan, PanSTARRS w & Y and solar filters
+
 2010-12-30  Tim Jenness  <tjenness@cpan.org>
 
 	* Use Module::Build
